<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Music Tag</string>
    <string name="action_settings">Settings</string>
    <string name="action_valid">Save</string>
    <string name="thumbnail">Thumbnail of the album artwork.</string>
    <string name="setting_preference_activity">Settings</string>
    <string name="source_folder_title">Source Folder</string>
    <string name="source_folder_summary">Choose the source folder where the file will be retrieved.</string>
    <string name="file">file</string>
    <string name="files">files</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="album_artist">Album Artist</string>
    <string name="composer">Composer</string>
    <string name="grouping">Grouping</string>
    <string name="genre">Genre</string>
    <string name="disc">Disc No</string>
    <string name="track">Track</string>
    <string name="title_activity_organisation">Organisation</string>
    <string name="action_organisation">Organisation</string>
    <string name="action_download_suggestion">Suggestions</string>
    <string name="underscore" translatable="false">_</string>
    <string name="slash" translatable="false">/</string>
    <string name="hyphen" translatable="false">-</string>
    <string name="space">Space</string>
    <string name="unknown">Unknown</string>
    <string name="invalid_connection_state_message">No internet connection !</string>
    <string name="retry">Retry</string>
    <string name="multiple_tag_message">(Different across multiple songs)</string>
    <string name="title_activity_tag_form">Edit Track</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...</string>
    <string name="saving">Saving</string>
    <string name="selected_item">Selected item</string>
    <string name="selected_items">Selected items</string>
    <string name="title_activity_suggestion">Suggestions</string>
    <string name="action_done_all">Done All</string>
    <string name="placeholder_title">Organisation File Path</string>
    <string name="placeholder_summary">Choose the file path where the file will be moved.</string>


</resources>