<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:layout_marginLeft="13dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/label_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24sp"
                android:width="180dp">
            </TextView>
            <EditText
                android:id="@+id/txt_title"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:width="180dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/label_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/artist"
                android:textSize="24sp"
                android:width="180dp">
            </TextView>
            <EditText
                android:id="@+id/txt_artist"
                android:layout_height="wrap_content"
                android:hint="@string/artist"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:width="180dp">
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/label_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/album"
                android:textSize="24sp"
                android:width="180dp">
            </TextView>
            <EditText
                android:id="@+id/txt_album"
                android:layout_height="wrap_content"
                android:hint="@string/album"
                android:inputType="text"
                android:layout_width="fill_parent"
                android:width="180dp">
            </EditText>
        </LinearLayout>
        <Button
            android:id="@+id/ButtonConfirm"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            android:layout_width="fill_parent"
            android:onClick="sendConfirmation">
        </Button>
    </LinearLayout>
</ScrollView>